# python-microservice-starter

./: .env  .gitignore  Dockerfile  Pipfile  README.md  docker-compose.yaml  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  server.py
app/: __init__.py  config.py  database.py  dev_server.py  main.py
app/api/controller/: files_controller.py  health_controller.py  users_controller.py
app/api/service/: files_service.py  users_service.py
app/common/: logger.py
app/entities/: user.py
app/entities/orm/: orm_model.py
app/exceptions/: application_errors.py  error_handlers.py
app/openapi/: api.oas.yml
db/: .env  Dockerfile  docker-compose.yml  my_db.mwb  my_db.sql
docker/: Dockerfile
openapi-generator/: openapitools.json  package-lock.json  package.json
scripts/: gen_sqlacode.py
tests/: data_helper.py
tests/api/controller/: test_health_controller.py
tests/api/service/: test_users_service.py
tests/data/: user.csv
