[tool.poetry]
name = "python-microservice-starter"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
connexion = {extras = ["flask", "swagger-ui", "uvicorn"], version = "^3.0.5"}
python-dotenv = "^1.0.0"
flask-cors = "^4.0.0"
flask-compress = "^1.13"
pymysql = "^1.0.2"
cryptography = "^41.0.2"
pandas = "^2.0.1"
pydantic = "^2.0.2"
sqlalchemy = "^2.0.4"
pydantic-settings = "^2.0.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.1.0"
isort = "^5.10.1"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "app.dev_server:start"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = "./tests"
addopts = "-v"
