[tool.poetry]
name = "python-microservice-starter"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.13"
connexion = {extras = ["flask", "swagger-ui", "uvicorn"], version = "^3.0.5"}
python-dotenv = "^1.0.0"
flask-cors = "^6.0.0"
flask-compress = "^1.13"
pymysql = "^1.0.2"
cryptography = "^44.0.0"
pandas = "^2.0.1"
pydantic = "^2.0.2"
sqlalchemy = "^2.0.4"
pydantic-settings = "^2.0.1"
uvicorn = {extras = ["standard"], version = "^0.34.2"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "app.dev_server:start"

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
testpaths = "./tests"
addopts = "-v -s"
